--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
+    "react-markdown": "^4.3.1",
     "react-use": "^13.6.3"
   },
   "devDependencies": {
